# orderai-backend

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_PR1b.md  CLAUDE_PR2.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  schema.sql
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_fix_stores_columns.py  0002_indexes_and_settings.py  0003_add_industry_type.py  0003_fix_orders_order_items.py  0004_add_customer_dealer_cols.py  0004_option_a_tenant_model.py  0005_wo002_line_event_dedup.py  wo002_wo006_merge_merge_wo002_and_wo006_heads.py  wo006_products_catalog.py  wo009_batches_paste_ingest.py
app/: main.py  scheduler.py  worker.py
app/api/v1/: auth.py  batches.py  orders.py  products.py  superadmin.py  webhook.py
app/core/: config.py  database.py  deps.py  events.py  i18n.py  response.py  security.py
app/models/: __init__.py
app/providers/: __init__.py  line_auth.py  openai_llm.py  queue_memory.py  queue_redis.py  stallpay.py
app/schemas/: __init__.py
app/services/: ai_service.py  batch_service.py  order_service.py  product_service.py  settings_service.py  tax.py
app/workers/: line_worker.py
scripts/: migrate.js
src/: app.js
src/routes/: auth.js  billing.js  preferences.js  user.js
tests/: conftest.py  test_auth_callback.py  test_batches.py  test_cors_config.py  test_health.py  test_jp_tax.py  test_line_worker.py  test_prefilter.py  test_products.py  test_schema_drift.py  test_webhook_fast.py  test_webhook_signature.py  test_wo006_ingest.py  test_worker_logic.py
(+5 files in other folders)
