[project]
name = "orderai-backend"
version = "1.0.0"
description = "OrderAI Backend — Python FastAPI + SQLAlchemy + PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "pyjwt>=2.8",
    "httpx>=0.27",
    "redis>=5.0",
    "rq>=1.16",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
pythonpath = ["."]
